Revision history for Perl extension File::HomeDir

0.83_01 Sat  1 Nov 2008
	- Patch from Darin McBride to fix user_home on Darwin.

0.82 Tue 14 Oct 2008
	- When we get more than one warning, diag the warnings 
	  so that we have actually have a chance to get rid of
	  the extra warnings.

0.81 Thu  3 Jul 2008
	- Updating to Module::Install 0.77
	- Localising $@ during evals
	- Updating Perl version dependency to 5.00503

0.80 Fri 27 Jun 2008
	- All clear on the CPAN Testers front, flipping to production

0.71_03 Wed 25 Jun 2008
	- Removing the Server 2003 and 2008 skips that should work
	  now that we create directories on demand.
	- File::HomeDir should now support "Perl on a Stick"

0.71_02 Mon 28 Apr 2008
	- Added `my_dot_config`.
	- Adding a base driver class.

0.71_01 Fri  4 Apr 2008
	- Converted from Registry checks to Win32 calls.
	  This includes giving it the "create directory" call.
	- Removing the dependency on the registry modules.

0.70    Fri 28 Feb 2008
	- Windows Server 2003 does not have Music/Pictures/etc directories
	  (correct the test to not expect them to exist)
	- Make the same assumption about Windows Server 2008

0.69    Sun  3 Feb 2008
	- No changes, incrementing for production release

0.68_01 Tue 22 Jan 2008
	- Fixed folder detection on Darwin so that symlinks that resolve to
	  directories are considered valid folders. Patch from David Wheeler.

0.67    Thu  6 Dec 2007
	- No functional changes, no need to upgrade.
	- Upgrading to Module::Install 0.68
	- Updating bundled author tests

0.66    Sat 25 Aug 2007
	- No functional changes, no need to upgrade.
	  (This release attempts to regain 100% CPAN Testers results)
	- Spurious failures on some path-levels of 5.9.0 due to a warnings
	  bug regression. Skip the relevant test on Perl 5.9.0.
	- Remove a -w flag in 02_main.t so test run under tainting

0.65    Wed 21 Mar 2007
	- Add a special case to pass users_home(current user) on to my_home